force-app/main/default/objects/Player__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The team, player is related to</description>
    <inlineHelpText>The team, player is related to</inlineHelpText>
    <label>Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Players</relationshipLabel>
    <relationshipName>Players</relationshipName>
    <type>Lookup</type>
</CustomField>