force-app/main/default/objects/Player__c/validationRules/Team_asiggned_rule_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Team_asiggned_rule_1</fullName>
    <active>true</active>
    <description>Team cannot be assigned to the player with blank Email</description>
    <errorConditionFormula>ISCHANGED( Team__c ) &amp;&amp; ISBLANK(Email__c )</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Team cannot be assigned to the player with blank Email</errorMessage>
</ValidationRule>